--- a/Mod1Lab/stylesheet.css
+++ b/Mod1Lab/stylesheet.css
@@ -24,7 +24,23 @@ html {
 Base Styles
 ****************************
 ***************************/
+body {
+    color: #414042;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: normal;
+}
 
+h1, h2, h3 {
+    font-weight: bold;
+}
+
+a {
+    color: #8dc63f;
+    font-weight: bold;
+}
+a:hover {
+    text-decoration: underline;
+}
 
 /***************************
 ****************************
@@ -32,6 +48,54 @@ Layout Styles
 ****************************
 ***************************/
 
+.container {
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+    max-width: 1170px;
+}
+
+.row {
+    margin-right: -15px;
+    margin-left: -15px;
+}
+
+/*define a CSS selector that targets all classes that start with .col-*/
+/*http://www.w3schools.com/cssref/css_selectors.asp*/
+[class*='col-'] {
+    width: 100%;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+/* clear any floated elements inside the .row*/
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+/* Media Query excludes extra small devices and includes small and above */
+@media (min-width: 48em) {
+    [class*='col-'] {
+        float: left;
+    }
+    /* Column Third */
+    .col-1-3 {
+        width: 33.3333%;
+    }
+    /* Column Two Thirds */
+    .col-2-3 {
+        width: 66.6666%;
+    }
+}
+
+/*
+Since the columns will float left for any device larger than extra small, 
+we need to clear our floats. Go to 
+https://www.sitepoint.com/clearing-floats-overview-different-clearfix-methods/ 
+for more information on clearing floats.*/
 
 /***************************
 ****************************
